# wechat-automation

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE-NUC9.md  CLAUDE.md  COLLABORATORS.md  PROJECT_INDEX.md  README.md  SECURITY.md  WORKFLOW.md  build-summary.html  cloudbuild.yaml  hub.config.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS
config/: settings.py
docs/: build-summary.html  hub.html
docs/reports/: WORKFLOW.html
extractors/: excel_extractor.py  gemini_extractor.py  pdf_extractor.py  pptx_extractor.py
scripts/: apply-branch-protection.sh  auto-commit-and-merge.sh  backfill_products.py  build_vendors.py  convert_and_extract.py  enrich_categories.py  generate-build-summary.sh  generate-hub-page.sh  gitleaks-scan.sh  initial_scan.py  organize_downloads-LAPTOP-9OUUIAT9.py  organize_downloads.py  rematch_vendors.py  seed_vendor_aliases.py  start_watcher.bat  sync_now-LAPTOP-9OUUIAT9.py  sync_now.bat  sync_now.py  verify_coverage.py
watcher/: file_watcher.py  onedrive_scanner.py  processor.py
web/: Dockerfile  app.py  cloudbuild-web.yaml  requirements.txt
web/static/docs/: index.html
web/templates/: index.html
wechat_automation/: dat_decoder.py  file_classifier.py  filename_parser.py  firestore_store.py  gcs_store.py  models.py  slack_notifier.py  vendor_aliases.py  vendor_matcher.py
